--- a/index.html
+++ b/index.html
@@ -263,6 +263,32 @@
       </tbody>
     </table>
 
+    <br>
+    <table align="center" width="500px">
+      <tbody>
+        <tr>
+          
+          <td align="center" width="100px">
+          <center>
+            <span style="font-size:20px"><a href="http://arxiv.org/abs/2203.09516">[Paper]</a></span>
+          </center>
+          </td>
+
+          <td align="center" width="100px">
+            <center>
+              <span style="font-size:20px"><a href="https://github.com/yccyenchicheng/AutoSDF/">[Code]</a></span>
+            </center>
+          </td>
+
+          <td align="center" width="100px">
+            <center>
+              <span style="font-size:20px"><a href="https://github.com/yccyenchicheng/AutoSDF/cite.bib">[bibtex]</a></span>
+            </center>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <br>
 
   <br><br>
 
