--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
           <td align="center" width="100px">
             <center>
-              <span style="font-size:20px"><a href="https://github.com/yccyenchicheng/AutoSDF/cite.bib">[bibtex]</a></span>
+              <span style="font-size:20px"><a href="./cite.bib">[bibtex]</a></span>
             </center>
           </td>
         </tr>
